[package]
categories = ["config"]
description = "An unopinionated library for obtaining configuration, data and cache directories"
documentation = "https://docs.rs/etcetera"
edition = "2018"
homepage = "https://github.com/arzg/etcetera"
license = "MIT OR Apache-2.0"
name = "etcetera"
readme = "README.md"
repository = "https://github.com/arzg/etcetera"
version = "0.4.0"

[dependencies]
cfg-if = "1.0.0"
dirs-next = "2.0.0"
libc = { version = "0.2.140", optional = true }
thiserror = "1.0.22"

[features]
default = ["runtime_dir_check"]
runtime_dir_check = ["dep:libc"]
